Initial commit to implement the Cluster Based ANN. Pending Items: 1. Run the performance benchmarks and put the details 2. Improve the performance
Signed-off-by: Navneet Verma <navneev@amazon.com>